--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,11 @@
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # 'bundle exec jekyll serve'. If you change this file, please restart the server process.
 #
+# 'JEKYLL_ENV=development bundle exec jekyll serve'
+# 'JEKYLL_ENV=production bundle exec jekyll serve'
+# To use LaTex in posts, add the following line to include the relevant JS
+# {% include /js/latex.js %}
+#
 # If you need help with YAML syntax, here are some quick references for you:
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
@@ -31,6 +36,9 @@ github_username:  mikeliaohm
 theme: minima
 plugins:
   - jekyll-feed
+# disqus:
+#   shortname: my_disqus_shortname
+# comments: true
 
 # Exclude from processing.
 # The following items will not be processed, by default.
