--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Mike's Blog
-email: mikeliaohm@gmail.com
+email: mike.hm.liao@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Coding and Learning.
 baseurl: "" # the subpath of your site, e.g. /blog
