--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,8 @@
 # This config file is meant for settings that affect your entire site, values
 # which you are expected to set up once and rarely need to edit after that.
 # For technical reasons, this file is *NOT* reloaded automatically when you use
-# `jekyll serve`. If you change this file, please restart the server process.
+# `bundle exec jekyll serve`. If you change this file, please restart the server process.
+# On windows: `JEKYLL_ENV=development bundle exec jekyll serve`
 
 # Theme Settings
 #
